feat(vp): add events count by equipments metric (#133)
